# django_auth

./: LICENSE  Readme.md  db.sqlite3  license.txt  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_user_username.py
accounts/templates/registration/: login.html  registration.html
django_auth/: settings.py  urls.py
