[tool.poetry]
name = "django-auth"
version = "0.1.0"
description = ""
authors = ["Jacek Ostański <jacek@ivolution.pl>"]
readme = "README.md"
packages = [{include = "django_auth"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
